--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,8 @@
 {
   "name": "memory-game",
+  "main": "js/index.js",
   "version": "1.0.0",
-  "description": "",
+  "description": "Memory game with JavaScript",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -9,7 +10,11 @@
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "keywords": ["Game", "JavaScript"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PascalTassel/Memory-game"
+  },
+  "keywords": ["Game", "JavaScript", "ES6"],
   "author": "Pascal Tassel",
   "license": "ISC",
   "devDependencies": {
