Move rankingLimit setting from database to game

--- a/settings.json
+++ b/settings.json
@@ -6,14 +6,14 @@
         "cardsValues": ["red apple", "banana", "orange", "green lemon", "pomegranate", "apricot", "yellow lemon", "strawberry", "green apple", "peach", "grapes", "watermelon", "plum", "pear", "red cherries", "raspberry", "mango", "yellow cherries"],
         "nbOccurences": 2,
         "visibleDuration": 2,
-        "backupMethod": "localStorage"
+        "backupMethod": "localStorage",
+        "rankingLimit": 5
     },
     "database": {
         "host": "localhost",
         "dbName": "memory_game",
         "tableName": "scores",
         "userName": "root",
-        "password": "",
-        "rankingLimit": 5
+        "password": ""
     }
 }
