replace backup method

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,6 @@
     "cardsValues": ["red apple", "banana", "orange", "green lemon", "pomegranate", "apricot", "yellow lemon", "strawberry", "green apple", "peach", "grapes", "watermelon", "plum", "pear", "red cherries", "raspberry", "mango", "yellow cherries"],
     "nbOccurences": 2,
     "visibleDuration": 2,
-    "backupMethod": "database",
+    "backupMethod": "localStorage",
     "rankingLimit": 5
 }
